--- a/content/2b.md
+++ b/content/2b.md
@@ -3,3 +3,9 @@ Extremist. Escaped from [[Dr. V]]
 Somehow had a red form of [[Aether]] 
 
 Spider body.
+
+We extracted memories:
+
+Train heist
+Operating table
+Guy with 3 kids
