--- a/content/2b.md
+++ b/content/2b.md
@@ -6,6 +6,9 @@ Spider body.
 
 We extracted memories:
 
-Train heist
+Train heist. totally not [[Partitio]]
 Operating table
-Guy with 3 kids
+Guy coming home with 2 kids
+Someone Scamming rich people. totally not [[Rowan]]
+totally not [[Iona]] preforming on stage 
+Totally not [[Oyster]] in an alleyway with someone else
