Iona and the 10th video

--- a/content/people/NPCs/2b.md
+++ b/content/people/NPCs/2b.md
@@ -4,7 +4,10 @@ Somehow had a red form of [[Aether]]
 
 Spider body.
 
-We extracted memories:
+
+## 10th Video
+
+[[Iona]] extracted memories from the 10 video in 2b's head which appears to have been obtained somehow by 2b from some other source as the clips appear to be older than he is. 
 
 Train heist. totally not [[Partitio]]
 Operating table
